--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head><!--Informacion del documetno :no visible-->
+  <head>
+    <!--Informacion del documetno :no visible-->
     <title>Contacto</title>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
@@ -24,7 +25,8 @@
     <header>
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
-      ><!-- estilo de la navegación-->
+      >
+        <!-- estilo de la navegación-->
         <a class="navbar-brand" href="#">
           <img
             src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_branimir-balogovic-faiqrv7fge0-unsplash.jpg?v=1588692801974"
@@ -34,7 +36,8 @@
             alt=""
           /><!-- Logo con atributos  (sin ruta)-->
         </a>
-        <ul><!-- opciones de la navegación con rutas (interiores)-->
+        <ul>
+          <!-- opciones de la navegación con rutas (interiores)-->
           <li class="nav-item active">
             <a class="nav-link btn btn-dark" href="/">Inicio </a>
           </li>
@@ -48,21 +51,20 @@
       <div
         class="cover d-flex justify-content-center align-items-center flex-column"
         style="background-image: url(https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_pills-on-blue-background-3936369.jpg?v=1589211449978);"
-      >
-      </div>
+      ></div>
     </header>
-      <!-- Infromación de contacto-->
-      <p class="textoconta">
-        Trinidad González Padin: 2944581418<br />
+    <!-- Infromación de contacto-->
+    <p class="textoconta">
+      Trinidad González Padin: 2944581418<br />
 
-        <img
-          src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_2pic.jpg?v=1589739816737"
-          class="rounded-circle"
-          width="80"
-          height="80"
-          alt="logo instaram"
-        /><!-- logo con atributos-->
-        Instagram: @trinigonzalezpadin
-      </p>
+      <img
+        src="https://cdn.glitch.com/94b1782f-485d-4be9-be6b-b48fefbcb22b%2Frsz_2pic.jpg?v=1589739816737"
+        class="rounded-circle"
+        width="80"
+        height="80"
+        alt="logo instaram"
+      /><!-- logo con atributos-->
+      Instagram: @trinigonzalezpadin
+    </p>
   </body>
 </html>
