--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
       href="{{ url_for('static', filename='css/style.css') }}"
     /> <!-- Anclaje al archivo de estilos-->
   </head>
-  <body class="fondo">
+  <body>
     <header><!-- Barra de navegacion y portada-->
       <nav
         class="navbar navbar-expand-lg navbar-light bg-light bg-dark navbar navbar-dark "
