--- a/templates/contacto.html
+++ b/templates/contacto.html
@@ -20,7 +20,7 @@
     />
     <!-- Anclaje al archivo de estilos-->
   </head>
-  <body class="fondo">
+  <body>
     <!-- Barra de navegacion y portada-->
     <header>
       <nav
